[gd_scene load_steps=5 format=3 uid="uid://c736uoqr6uqrj"]

[ext_resource type="Texture2D" uid="uid://cp63swfwwrd3r" path="res://assets/note.png" id="1_3827r"]
[ext_resource type="Script" uid="uid://b7dkaih30c5ch" path="res://scripts/note.gd" id="1_f5wnq"]
[ext_resource type="Texture2D" uid="uid://c3sw1021ug38s" path="res://assets/namepart.png" id="2_f5wnq"]
[ext_resource type="Texture2D" uid="uid://b1uokcuwr1yc3" path="res://assets/notemask.png" id="3_nlx2q"]

[node name="Card" type="Control" node_paths=PackedStringArray("line1", "line2", "line3", "line4", "line5", "username", "username_bg", "drawing_layer", "card_mask")]
clip_contents = true
custom_minimum_size = Vector2(466, 170)
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
focus_mode = 1
script = ExtResource("1_f5wnq")
line1 = NodePath("line1")
line2 = NodePath("line2")
line3 = NodePath("line3")
line4 = NodePath("line4")
line5 = NodePath("line5")
username = NodePath("name")
username_bg = NodePath("nameBG")
drawing_layer = NodePath("drawing")
card_mask = NodePath("cardmask")

[node name="cardBG" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 466.0
offset_bottom = 170.0
texture = ExtResource("1_3827r")

[node name="nameBG" type="NinePatchRect" parent="."]
z_index = 4
layout_mode = 0
offset_left = 4.0
offset_top = 2.0
offset_right = 208.0
offset_bottom = 38.0
texture = ExtResource("2_f5wnq")
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 6
patch_margin_bottom = 4
axis_stretch_horizontal = 2

[node name="name" type="Label" parent="."]
z_index = 4
layout_mode = 0
anchor_left = 0.012875536
anchor_top = 0.03529412
anchor_right = 0.4334764
anchor_bottom = 0.2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
text = "user873486242263"

[node name="cardmask" type="TextureRect" parent="."]
z_index = 5
layout_mode = 0
offset_right = 466.0
offset_bottom = 170.0
texture = ExtResource("3_nlx2q")

[node name="line1" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.4613734
anchor_top = 0.03529412
anchor_right = 0.8819742
anchor_bottom = 0.2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
text = "12345677891234567890"
metadata/_edit_use_anchors_ = true

[node name="line2" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.012875536
anchor_top = 0.22941177
anchor_right = 0.527897
anchor_bottom = 0.39411765
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
text = "12345678912345678912345678912345678901"
metadata/_edit_use_anchors_ = true

[node name="line3" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.012875536
anchor_top = 0.41764706
anchor_right = 0.98712444
anchor_bottom = 0.58235294
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
text = "12345678912345678912345678912345678901"
metadata/_edit_use_anchors_ = true

[node name="line4" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.012875536
anchor_top = 0.60588235
anchor_right = 0.98712444
anchor_bottom = 0.7705882
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
text = "12345678912345678912345678912345678901"
metadata/_edit_use_anchors_ = true

[node name="line5" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.012875536
anchor_top = 0.7941176
anchor_right = 0.98712444
anchor_bottom = 0.9588235
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
text = "12345678912345678912345678912345678901"
metadata/_edit_use_anchors_ = true

[node name="drawing" type="TextureRect" parent="."]
z_index = 3
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = -4.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2
